--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "require": "./dist/index.js",
     "import": "./dist/index.mjs"
   },
+  "bin": {
+    "monoman": "./bin/monoman.mjs"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -45,7 +48,6 @@
     "@sxzz/eslint-config-ts": "^2.4.4",
     "@types/node": "^18.13.0",
     "bumpp": "^8.2.1",
-    "bun": "^0.5.6",
     "eslint": "^8.34.0",
     "eslint-define-config": "^1.15.0",
     "fast-glob": "^3.2.12",
