--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.json,.md",
     "lint:fix": "pnpm run lint --fix",
     "build": "tsup && tsx scripts/postbuild.mts",
-    "test": "vitest",
     "release": "bumpp && pnpm publish",
     "prepublishOnly": "pnpm run build"
   },
@@ -54,8 +53,7 @@
     "prettier": "^2.8.4",
     "tsup": "^6.6.2",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5",
-    "vitest": "^0.28.5"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=14.19.0"
