--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "es2022",
     "module": "esnext",
-    "lib": ["es2019"],
+    "lib": ["es2022"],
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "bundler",
@@ -11,6 +11,6 @@
     "resolveJsonModule": true,
     "types": ["node"]
   },
-  "include": ["src", "scripts"],
+  "include": ["src"],
   "exclude": ["tests/fixtures"]
 }
