--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2022",
+    "target": "esnext",
     "module": "esnext",
     "lib": ["es2022"],
     "strict": true,
@@ -11,6 +11,5 @@
     "resolveJsonModule": true,
     "types": ["node"]
   },
-  "include": ["src"],
-  "exclude": ["tests/fixtures"]
+  "include": ["src"]
 }
