--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monoman",
   "version": "0.2.0",
   "packageManager": "pnpm@8.6.12",
-  "description": "Monorepo manager.",
+  "description": "Manage monorepo common files.",
   "license": "MIT",
   "homepage": "https://github.com/sxzz/monoman#readme",
   "bugs": {
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "@antfu/utils": "^0.7.6",
+    "citty": "^0.1.3",
+    "consola": "^3.2.3",
     "fast-glob": "^3.3.1",
     "unconfig": "^0.3.10"
   },
