--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.4.2",
   "packageManager": "pnpm@8.15.6",
   "description": "Manage monorepo common files.",
+  "type": "module",
   "license": "MIT",
   "homepage": "https://github.com/sxzz/monoman#readme",
   "bugs": {
@@ -16,14 +17,14 @@
     "dist"
   ],
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    "require": "./dist/index.js",
-    "import": "./dist/index.mjs"
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js"
   },
   "bin": {
-    "monoman": "./bin/monoman.mjs"
+    "monoman": "./bin/monoman.js"
   },
   "publishConfig": {
     "access": "public"
@@ -56,7 +57,7 @@
     "typescript": "^5.4.4"
   },
   "engines": {
-    "node": ">=16.14.0"
+    "node": ">=18.12.0"
   },
   "prettier": "@sxzz/prettier-config"
 }
