feat!: drop cjs support

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    "require": "./dist/index.cjs",
-    "import": "./dist/index.js"
+    ".": {
+      "import": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
   },
   "bin": {
     "monoman": "./bin/monoman.js"
