--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "dev": "tsx src/dev.ts",
     "lint": "eslint .",
     "lint:fix": "pnpm run lint --fix",
-    "build": "tsup",
-    "watch": "tsup --watch",
+    "build": "tsdown",
+    "watch": "tsdown --watch",
     "typecheck": "tsc --noEmit",
     "release": "bumpp && pnpm publish",
     "prepublishOnly": "pnpm run build"
@@ -58,7 +58,7 @@
     "bumpp": "^9.9.2",
     "eslint": "^9.17.0",
     "prettier": "^3.4.2",
-    "tsup": "^8.3.5",
+    "tsdown": "^0.5.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
