--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@antfu/utils": "^8.0.0",
     "citty": "^0.1.6",
     "consola": "^3.3.2",
-    "fast-glob": "^3.3.2",
     "js-yaml": "npm:@zkochan/js-yaml@0.0.7",
+    "tinyglobby": "^0.2.10",
     "unconfig": "^0.6.0"
   },
   "devDependencies": {
