--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "consola": "^3.3.3",
     "fast-glob": "^3.3.2",
     "js-yaml": "npm:@zkochan/js-yaml@0.0.7",
+    "pnpm-multi-versions": "^0.3.1",
     "unconfig": "^0.6.0"
   },
   "devDependencies": {
