--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -6,8 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+permissions: {}
+
 jobs:
   unit-test:
     uses: sxzz/workflows/.github/workflows/unit-test.yml@v1
     with:
-      test: ''
+      skip-test: true
