refactor!: move `presets` from index to new entry

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "exportall.config.folderListener": ["/src/presets"],
+  "exportall.config.semis": false
 }
