--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "monoman",
-  "version": "0.8.0",
-  "packageManager": "pnpm@10.23.0",
-  "description": "Manage monorepo common files.",
   "type": "module",
+  "version": "0.8.0",
+  "packageManager": "pnpm@10.29.1",
+  "description": "Manage monorepo common files.",
+  "author": "Kevin Deng <sxzz@sxzz.moe>",
   "license": "MIT",
+  "funding": "https://github.com/sponsors/sxzz",
   "homepage": "https://github.com/sxzz/monoman#readme",
-  "bugs": {
-    "url": "https://github.com/sxzz/monoman/issues"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sxzz/monoman.git"
   },
-  "author": "Kevin Deng <sxzz@sxzz.moe>",
-  "funding": "https://github.com/sponsors/sxzz",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
+  "bugs": {
+    "url": "https://github.com/sxzz/monoman/issues"
+  },
   "exports": {
     ".": "./dist/index.mjs",
     "./cli": "./dist/cli.mjs",
@@ -28,6 +22,7 @@
     "./run": "./dist/run.mjs",
     "./package.json": "./package.json"
   },
+  "types": "./dist/index.d.mts",
   "typesVersions": {
     "*": {
       "*": [
@@ -39,11 +34,17 @@
   "bin": {
     "monoman": "./dist/run.mjs"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=22.14.0"
+  },
   "scripts": {
-    "dev": "tsx src/dev.ts",
+    "dev": "unrun src/run.ts",
     "lint": "eslint .",
     "lint:fix": "pnpm run lint --fix",
     "build": "tsdown",
@@ -56,24 +57,22 @@
     "cac": "^6.7.14",
     "consola": "^3.4.2",
     "js-yaml": "npm:@zkochan/js-yaml@0.0.10",
-    "pnpm-multi-versions": "^0.5.4",
-    "unconfig": "^7.4.1"
+    "pnpm-multi-versions": "^0.6.0",
+    "unconfig": "^7.4.2"
   },
   "devDependencies": {
     "@antfu/utils": "^9.3.0",
-    "@sxzz/eslint-config": "^7.3.2",
-    "@sxzz/prettier-config": "^2.2.5",
+    "@sxzz/eslint-config": "^7.6.1",
+    "@sxzz/prettier-config": "^2.3.1",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^24.10.1",
-    "bumpp": "^10.3.1",
-    "eslint": "^9.39.1",
-    "prettier": "^3.6.2",
-    "tsdown": "^0.16.6",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
-  },
-  "engines": {
-    "node": ">=22.14.0"
+    "@types/node": "^25.2.2",
+    "bumpp": "^10.4.1",
+    "eslint": "^9.39.2",
+    "prettier": "^3.8.1",
+    "tsdown": "^0.20.3",
+    "tsdown-preset-sxzz": "^0.3.2",
+    "typescript": "^5.9.3",
+    "unrun": "^0.2.27"
   },
   "prettier": "@sxzz/prettier-config"
 }
