--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "lint:fix": "pnpm run lint --fix",
     "build": "tsdown",
     "watch": "tsdown --watch",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo --noEmit",
     "release": "bumpp",
     "prepublishOnly": "pnpm run build"
   },
@@ -66,6 +66,7 @@
     "@sxzz/prettier-config": "^2.3.1",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.2.2",
+    "@typescript/native-preview": "7.0.0-dev.20260208.1",
     "bumpp": "^10.4.1",
     "eslint": "^9.39.2",
     "prettier": "^3.8.1",
